--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
-    "image":"mcr.microsoft.com/devcontainers/universal:2",
+    "name": "C# (.NET)",
+    "image": "mcr.microsoft.com/devcontainers/dotnet:0-7.0",
     "customizations": {
         "vscode": {
             "extensions": [
